tools/tests/errors/surf_num_12.ki
# atanh at the boundary +1 is a math domain error.
var m = import("math")
discard m.atanh(1)
